--- a/PROJEKTFINAL/baza_firm/templates/registration/login.html
+++ b/PROJEKTFINAL/baza_firm/templates/registration/login.html
@@ -8,4 +8,6 @@
 {{ form.as_p }}
 <input type="submit" value="Login">
 </form>
+<a href="signup.html"/>
+Nie masz konta? Zarejestruj się! </a>
 {% endblock %}
