--- a/PROJEKT/PROJEKTFINAL/baza_firm/templates/company.html
+++ b/PROJEKT/PROJEKTFINAL/baza_firm/templates/company.html
@@ -40,6 +40,11 @@ Nie jesteś zalogowany! Musisz być zalogowany aby zobaczyć tą sekcję.
 <h4>Punkt stacjonarny:</h4><br>
 {{ company.have_stationary }}
 <br><br><br>
+
+<h4>Atrybuty</h4><br>
+{{ company.atributes_comp }}
+<br><br><br>
+ {{attirbutes}}
 <h4>Komentarze</h4><br>
 {% for c in comments %}
 <b>{{c.author_name}}</b> dodał komentarz
