--- a/PROJEKT/PROJEKTFINAL/baza_firm/templates/company.html
+++ b/PROJEKT/PROJEKTFINAL/baza_firm/templates/company.html
@@ -42,9 +42,13 @@ Nie jesteś zalogowany! Musisz być zalogowany aby zobaczyć tą sekcję.
 <br><br><br>
 
 <h4>Atrybuty</h4><br>
-{{ company.atributes_comp }}
-<br><br><br>
- {{attirbutes}}
+
+{% for attr in company.atribute_comp.all %}
+{{ attr }}<br>
+{% endfor %}
+
+
+
 <h4>Komentarze</h4><br>
 {% for c in comments %}
 <b>{{c.author_name}}</b> dodał komentarz
